--- a/style.css
+++ b/style.css
@@ -4,12 +4,16 @@ body {
   background-color: #1c1c1e;
   color: #f2f2f7;
   line-height: 1.5;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .glass-header {
   position: sticky;
   top: 0;
-  width: 100%;
+  right: 0;
+  width: 100vw;
+  max-width: 100vw;
   height: 44px;
   display: flex;
   justify-content: space-between;
